# visual-financial-rag

./: .env  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: limit_checker.ipynb
src/: download_weights.py  verify.py
src/rag/: ingest.py  openrouter_client.py  query.py
src/vision/: vision_processor.py
storage/: docstore.json  index_store.json
